fixed a couple of layout issues

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,5 +1,7 @@
 * {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+
 }
 body {
   margin: 0;
